<resources>

    <string name="app_name" translatable="false">Haikyuu! Builder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!-- Menus -->
    <string name="login">Iniciar sesión</string>
    <string name="verjugadores">Ver jugadores</string>
    <string name="misequipos">Mis equipos</string>
    <string name="jugarpartida">Jugar partida</string>
    <string name="cerrarsesion">Cerrar sesión</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="equipos">Equipos</string>
    <string name="posiciones">Posiciones</string>
    <string name="elegirjugador">Elegir jugador</string>
    <string name="miperfil">Mi perfil</string>
    <string name="buscarpartida">Buscar partida</string>
    <string name="invitarpartida">Jugar con amigo</string>
    <string name="historial">Historial de partidas</string>
    <string name="borrarequipos">Borrar equipo</string>
    <string name="flechaatras">Flecha atras</string>
    <string name="equipo1">Equipo 1</string>
    <string name="equipo2">Equipo 2</string>
    <string name="equipo3">Equipo 3</string>
    <string name="equipo4">Equipo 4</string>
    <string name="equipo5">Equipo 5</string>
    <string name="logo">Logo Haikyuu</string>
    <string name="iniciodesesion">Inicio de sesión</string>
    <string name="registro">Datos del registro</string>
    <string name="victoria">Victoria</string>
    <string name="derrota">Derrota</string>
    <string name="ultimaspartidas">Últimas 10 partidas</string>
    <string name="tuequipo">Tu equipo</string>
    <string name="equiporival">Equipo rival</string>
    <string name="menuprincipal">Menú principal</string>
    <string name="listadeamigos">Lista de amigos:</string>
    <string name="cambiarjugador">Cambiar jugador</string>
    <string name="quitarjugador">Quitar jugador</string>
    <string name="amigopartida">Invitar a partida</string>
    <string name="amigoborrar">Borrar de amigos</string>



    <!-- Registro -->
    <string name="usuario">Usuario:</string>
    <string name="contraseña">Contraseña: </string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Teléfono:</string>
    <string name="edad">Edad:</string>
    <string name="genero">Género:</string>

    <!-- Campo -->
    <string name="jugador1">Jugador 1</string>
    <string name="jugador2">Jugador 2</string>
    <string name="jugador3">Jugador 3</string>
    <string name="jugador4">Jugador 4</string>
    <string name="jugador5">Jugador 5</string>
    <string name="jugador6">Jugador 6</string>
    <string name="jugador7">Jugador 7</string>

    <!-- Posiciones -->
    <string name="bloqueador">Bloqueador</string>
    <string name="opuesto">Opuesto</string>
    <string name="punta">Punta</string>
    <string name="colocador">Colocador</string>
    <string name="libero">Libero</string>

    <!-- Posiciones -->
    <string name="datos">Datos</string>
    <string name="posicion">Posición:</string>
    <string name="equipo">Equipo:</string>
    <string name="altura">Altura:</string>

    <!-- Frases campo -->
    <string name="elegirjugadoresequipo">Elige tus jugadores:</string>
    <string name="mediaequipo">Características media del equipo:</string>

    <!-- Características -->
    <string name="caracteristicas">Características</string>
    <string name="bloqueo">Bloqueo:</string>
    <string name="remate">Remate:</string>
    <string name="recepcion">Recepción:</string>
    <string name="saque">Saque:</string>
    <string name="colocacion">Colocación:</string>

    <!-- Equipos -->
    <string name="karasuno">Preparatoria Karasuno</string>
    <string name="nekoma">Preparatoria Nekoma</string>
    <string name="kamomedai">Preparatoria Kamomedai</string>
    <string name="fukorodani">Academia Fukurōdani</string>
    <string name="date">Preparatoria Tecnica de Date</string>
    <string name="aobajosai">Preparatoria Aoba Josai</string>
    <string name="shiratorizawa">Academia Shiratorizawa</string>
    <string name="inarizaki">Preparatoria Inarizaki</string>

    <!-- Jugadores -->
    <!-- Karasuno -->
    <string name="hinata" translatable="false">Shoyo Hinata</string>
    <string name="kageyama" translatable="false">Tobio Kageyama</string>
    <string name="tanaka" translatable="false">Ryu Tanaka</string>
    <string name="nishinoya" translatable="false">Yū Nishinoya</string>
    <string name="tsukishima" translatable="false">Kei Tsukishima</string>
    <string name="asahi" translatable="false">Azumane Asahi</string>
    <string name="daichi" translatable="false">Sawamura Daichi</string>
    <string name="sugawara" translatable="false">Kōshi Sugawara</string>
    <string name="yamaguchi" translatable="false">Tadashi Yamaguchi</string>

    <!-- Nekoma -->
    <string name="kuroo" translatable="false">Tetsurō Kuroo</string>
    <string name="kai" translatable="false">Nobuyuki Kai</string>
    <string name="yaku" translatable="false">Morisuke Yaku</string>
    <string name="yamamoto" translatable="false">Taketora Yamamoto</string>
    <string name="kenma" translatable="false">Kozume Kenma</string>
    <string name="fukunaga" translatable="false">Shōhei Fukunaga</string>
    <string name="lev" translatable="false">Lev Haiba</string>

    <!-- Kamomedai -->
    <string name="suwa" translatable="false">Aikichi Suwa</string>
    <string name="nozawa" translatable="false">Izuru Nozawa</string>
    <string name="hoshiumi" translatable="false">Kōrai Hoshiumi</string>
    <string name="hirugami" translatable="false">Sachirō Hirugami</string>
    <string name="hakuba" translatable="false">Gao Hakuba</string>
    <string name="bessho" translatable="false">Kazuyoshi Bessho</string>
    <string name="kanbayashi" translatable="false">Keiichirō Kanbayashi</string>

    <!-- Fukorodani -->
    <string name="washio" translatable="false">Tatsuki Washio</string>
    <string name="sarukui" translatable="false">Yamato Sarukui</string>
    <string name="bokuto" translatable="false">Kōtarō Bokuto</string>
    <string name="akaashi" translatable="false">Keiji Akaashi</string>
    <string name="konoha" translatable="false">Akinori Konoha</string>
    <string name="komi" translatable="false">Haruki Komi</string>
    <string name="onaga" translatable="false">Wataru Onaga</string>

    <!-- Date -->
    <string name="aone" translatable="false">Takanobu Aone</string>
    <string name="futakuchi" translatable="false">Kenji Futakuchi</string>
    <string name="obara" translatable="false">Yutaka Obara</string>
    <string name="koganegawa" translatable="false">Kanji Koganegawa</string>
    <string name="onagawa" translatable="false">Tarō Onagawa</string>
    <string name="fukiage" translatable="false">Jingo Fukiage</string>
    <string name="sakumani" translatable="false">Kōsuke Sakunami</string>

    <!-- Aoba Josai -->
    <string name="oikawa" translatable="false">Tōru Oikawa</string>
    <string name="matsukawa" translatable="false">Issei Matsukawa</string>
    <string name="iwaizumi" translatable="false">Hajime Iwaizumi</string>
    <string name="watari" translatable="false">Shinji Watari</string>
    <string name="kindaichi" translatable="false">Yūtarō Kindaichi</string>
    <string name="kumini" translatable="false">Akira Kumini</string>
    <string name="kentaro" translatable="false">Kentarō Kyōtanii</string>

    <!-- Shiratorizawa -->
    <string name="ushijima" translatable="false">Wakatoshi Ushijima</string>
    <string name="tendo" translatable="false">Satori Tendō</string>
    <string name="shibaru" translatable="false">Kenjirō  Shibaru</string>
    <string name="reon" translatable="false">Reon Ōhira</string>
    <string name="goshiki" translatable="false">Tsutomu Goshiki</string>
    <string name="yamagata" translatable="false">Hayato Yamagata</string>
    <string name="kawanishi" translatable="false">Taichi Kawanishi</string>

    <!-- Inarizaki -->
    <string name="kita" translatable="false">Shinsuke Kita</string>
    <string name="aran" translatable="false">Aran Ojiro</string>
    <string name="osamu" translatable="false">Osamu  Miya</string>
    <string name="atsumu" translatable="false">Atsumu Miya</string>
    <string name="suna" translatable="false">Rintarō Suna</string>
    <string name="omimi" translatable="false">Ren Ōmimi</string>
    <string name="akagi" translatable="false">Michinari Akagi</string>

    <string name="todo" translatable="false">TODO</string>


    <!-- Listas -->
    <string name="conectados">Conectados</string>
    <string name="desconectados">Desconectados</string>

    <string-array name="conectados">
        <item>Crypt0r</item>
        <item>Amaru</item>
        <item>Platano</item>
        <item>Shawn</item>
    </string-array>

    <string-array name="desconectados">
        <item>Mandarina</item>
        <item>Ordel</item>
        <item>Eleven</item>
        <item>Axel</item>
    </string-array>


</resources>