<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranja">

    <ImageView
        android:contentDescription="@string/logo"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondonegro"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usuario"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:inputType="text"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contraseña"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nombre"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/apellido"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/correo"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondonaranja"
            android:text="@string/crearcuenta"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondonaranja">


    </LinearLayout>

    <TextView
        android:id="@+id/irAlIniciarSesion"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="0dp"
        android:background="@drawable/fondonegro"
        android:fontFamily="@font/roboto_italic"
        android:gravity="center"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/blanco" />
</LinearLayout>