<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_menus_naranja"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/irAtras"
            android:contentDescription="@string/flechaatras"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:src="@drawable/flecha" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="200dp"
                android:layout_height="67dp"
                android:layout_gravity="end"
                android:src="@drawable/logo" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/equipo1"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/boton_negro"
                android:textColor="@color/blanco"
                android:fontFamily="@font/roboto_black"
                android:text="@string/equipo1"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/equipo2"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/boton_negro"
                android:fontFamily="@font/roboto_black"
                android:layout_marginBottom="10dp"
                android:text="@string/equipo2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/blanco"
                android:textSize="20sp"/>

            <Button
                android:id="@+id/equipo3"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/boton_negro"
                android:fontFamily="@font/roboto_black"
                android:text="@string/equipo3"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/blanco"
                android:textSize="20sp"/>

        </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
    </View>

</LinearLayout>