<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranja"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/irAtras"
            android:contentDescription="@string/flechaatras"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:background="@drawable/boton_sombra_atras" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:contentDescription="@string/logo"
                android:layout_width="200dp"
                android:layout_height="67dp"
                android:layout_gravity="end"
                android:src="@drawable/logo" />
        </LinearLayout>

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/listadeamigos"
            android:textSize="23sp"
            android:textColor="@color/negro"
            android:layout_marginVertical="20dp"/>


    <ExpandableListView
        android:id="@+id/listaamigos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>