<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranja">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondonaranja">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondonegro"
        android:orientation="vertical"
        android:padding="100dp"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usuario"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/contraseña"
            android:textColor="@color/blanco"
            android:fontFamily="@font/roboto_regular"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondoblanco"
            android:layout_marginBottom="20dp"
            android:paddingBottom="10dp" />

        <Button
            android:id="@+id/iniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/fondonaranja"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_black"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/fondonaranja">
    </LinearLayout>



    <TextView
        android:id="@+id/irAlRegistro"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:text="@string/crearcuenta"
        android:textAlignment="center"
        android:textColor="@color/blanco"
        android:background="@drawable/fondonegro"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_italic" />
</LinearLayout>